# FastAPI_HordaApp

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt
alembic/: env.py
alembic/versions/: 2024_05_25_1448-1c836d163fdc_add_company.py  2024_05_25_1455-45f00a859680_add_products_table.py  2024_05_25_1538-0e29cb3f55ca_stocks.py  2024_05_27_1043-4109ab086958_add_production_model.py  2024_05_27_1048-4c65d6b983d0_m2m_table.py  2024_05_27_1116-4dbf55bd5b2a_add_type_model.py  2024_05_27_1128-048ebbf1f5f1_add_warehouse.py  2024_05_29_1423-163475ec7c79_add_field_weight_product_and_weight_.py  2024_05_29_1542-11952e2d8151_add_recipe_model.py  2024_05_30_0219-3d942b896c42_add_biginteger_to_company_fields.py  2024_06_03_1244-c1b8f55a4c00_delet_recipe.py  2024_06_03_1345-4e207ff792f6_deleted_recipe_table_and_add_product_.py  2024_06_06_1750-ae047e36ef3f_add_assoc_orm_table_stock_production_.py  2024_06_07_1414-0ebef0933378_delete_weight_stock_field_in_production_.py  2024_07_08_2332-9bc62e2d3b0c_.py
app/: __init__.py  app.py  cfg_company.py  cfg_products.py  cfg_recipe.py  cfg_stocks.py  cfg_type.py  main.py  main_crud.py
app/core/: __init__.py  config.py
app/crud/: company.py  product.py  production.py  stock.py  type.py
app/db/: __init__.py  database.py  session.py
app/exceptions/: __init__.py  conn_exception.py  exception.py  pydantic_exception.py
app/models/: __init__.py  base.py  company.py  product.py  (+7 more)
tests/: cfg_company.py  config.py  conftest.py  logs.py  session.py  test_main.py  test_models  test_models.py
(+22 files in other folders)
