[tool.poetry]
name = "hordaapp"
version = "0.1.0"
description = ""
authors = ["Ivan Lebedev <ivanleb171@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
black = "^24.4.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-factoryboy = "^2.7.0"
pytest-asyncio = "^0.23.7"
pytest-postgresql = "^6.0.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
